# phone-inventory-metric

./: .gitignore  README.md  pyproject.toml
scripts/: fix.sh
src/phone_inventory_metric/: __init__.py  common.py  core.py
tests/: test_core.py
