[project]
name = "phone-inventory-metric"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipatok>=0.4.2",
    "panphon>=0.22.2",
    "scipy>=1.15",
    "scipy-stubs>=1.15",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pyright[nodejs]>=1.1.405",
    "pytest>=9.0.2",
    "ruff>=0.13.1",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
